gccida/c1/fixup_stack_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_stack_1/src/function.c:3128:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_stack_1/src/function.c:3138:67: error: use of undeclared identifier 'machine_mode'
if ( **( _WORD **)( v5.rtwint + 16) == 54 && !memory_address_p( ( machine_mode)BYTE2( v4), x->fld[0].rtx) ) 
                                                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_stack_1/src/obj/function.o] Error 1
